# rustybuild

./: .gitignore  ANALYSIS.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md  test_build.sh  test_cmake.rs  test_cmake.sh  test_convert.sh
example_too_complex/: CMakeLists.txt  build.toml  build_test.toml
example_too_complex/apps/admin/: build.toml
example_too_complex/apps/admin/include/: admin.h  main.h
example_too_complex/apps/admin/src/: admin.cpp  admin.h
example_too_complex/apps/cli/: build.toml
example_too_complex/apps/cli/include/: cli.h  main.h
example_too_complex/apps/cli/src/: cli.cpp  cli.h
example_too_complex/apps/client/: build.toml
example_too_complex/apps/client/include/: client.h  main.h
example_too_complex/apps/client/src/: client.cpp  client.h
example_too_complex/apps/daemon/: build.toml
example_too_complex/apps/daemon/include/: daemon.h  main.h
example_too_complex/apps/daemon/src/: daemon.cpp  daemon.h
example_too_complex/apps/server/: build.toml
example_too_complex/apps/server/include/: main.h  server.h
example_too_complex/apps/server/src/: server.cpp  server.h
example_too_complex/benchmarks/: main.cpp  main.h  perf_test.cpp  perf_test.h
example_too_complex/benchmarks/cpu/: build.toml
example_too_complex/benchmarks/cpu/include/: cpu.h  main.h
example_too_complex/benchmarks/cpu/src/: cpu.cpp  cpu.h
example_too_complex/benchmarks/disk/: build.toml
example_too_complex/benchmarks/disk/include/: disk.h  main.h
example_too_complex/benchmarks/disk/src/: disk.cpp  disk.h
example_too_complex/benchmarks/graphics/: build.toml
example_too_complex/benchmarks/graphics/include/: graphics.h  main.h
example_too_complex/benchmarks/graphics/src/: graphics.cpp  graphics.h
example_too_complex/benchmarks/memory/: build.toml
example_too_complex/benchmarks/memory/include/: main.h  memory.h
example_too_complex/benchmarks/memory/src/: memory.cpp  memory.h
example_too_complex/benchmarks/network/: build.toml
example_too_complex/benchmarks/network/include/: main.h  network.h
example_too_complex/benchmarks/network/src/: network.cpp  network.h
example_too_complex/include/: app.h  main.h  perf_test.h
example_too_complex/include/common/: config.h  logger.h
example_too_complex/include/core/: engine.h  manager.h
example_too_complex/include/io/: reader.h  writer.h
example_too_complex/include/math/: calculator.h  vector.h
example_too_complex/include/network/: client.h  server.h
example_too_complex/include/utils/: file_util.h  string_util.h
example_too_complex/libs/audio/: build.toml
example_too_complex/libs/audio/include/: base.h  decoder.h  player.h  shared.h
example_too_complex/libs/audio/src/: base.cpp  base.h  decoder.cpp  (+2 more)
example_too_complex/libs/core/: build.toml
example_too_complex/libs/data/: build.toml
example_too_complex/libs/graphics/: build.toml
example_too_complex/libs/io/: build.toml
example_too_complex/libs/math/: build.toml
example_too_complex/libs/network/: build.toml
example_too_complex/libs/security/: build.toml
example_too_complex/libs/serialization/: build.toml
example_too_complex/libs/utils/: build.toml
example_too_complex/services/api/: build.toml
example_too_complex/services/auth/: build.toml
example_too_complex/services/cache/: build.toml
example_too_complex/services/config/: build.toml
example_too_complex/services/db/: build.toml
example_too_complex/services/logging/: build.toml
example_too_complex/services/monitoring/: build.toml
example_too_complex/services/queue/: build.toml
example_too_complex/src/: app.cpp  app.h  main.cpp  main.h
example_too_complex/src/common/: config.cpp  config.h  logger.cpp  logger.h
example_too_complex/src/core/: engine.cpp  engine.h  manager.cpp  manager.h
example_too_complex/src/io/: reader.cpp  reader.h  writer.cpp  writer.h
example_too_complex/src/math/: calculator.cpp  calculator.h  vector.cpp  vector.h
example_too_complex/src/network/: client.cpp  client.h  server.cpp  server.h
example_too_complex/src/utils/: file_util.cpp  file_util.h  string_util.cpp  string_util.h
example_too_complex/tests/: test_math.cpp  test_math.h  test_utils.cpp  test_utils.h
example_too_complex/tests/integration/: build.toml
example_too_complex/tests/performance/: build.toml
example_too_complex/tests/unit/: build.toml
example_too_complex/tools/analyzer/: build.toml
example_too_complex/tools/builder/: build.toml
example_too_complex/tools/formatter/: build.toml
example_too_complex/tools/generator/: build.toml
example_too_complex/tools/validator/: build.toml
gui/src-tauri/: Cargo-test.toml  Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/src/: cmake_converter.rs  lib.rs  main.rs
(+234 files in other folders)
