[package]
name = "ngmake"
version = "0.1.0"
edition = "2021"
description = "ngmake - Modern C++ build tool with DAG-based dependency resolution, parallel compilation, and nested build.toml support"

[lib]
name = "ngmake"
path = "src/lib.rs"

[[bin]]
name = "ngm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"
regex = "1.10"
