[package]
name = "ngmake-gui"
version = "0.1.0"
edition = "2021"
description = "GUI for ngmake"
default-run = "ngmake-gui"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ngmake = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
